--- a/strapi-backend/.env.example
+++ b/strapi-backend/.env.example
@@ -3,4 +3,6 @@ PORT=1337
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
+GOOGLE_CLIENT_ID=tobemodified
+GOOGLE_CLIENT_SECRET=tobemodified
 JWT_SECRET=tobemodified
