--- a/strapi-backend/package.json
+++ b/strapi-backend/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-i18n": "4.10.5",
     "@strapi/plugin-users-permissions": "4.10.5",
     "@strapi/strapi": "4.10.5",
+    "passport-google-oauth2": "^0.2.0",
     "pg": "8.8.0"
   },
   "author": {
