--- a/strapi-backend/.env.example
+++ b/strapi-backend/.env.example
@@ -1,6 +1,18 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-JWT_SECRET=tobemodified
+APP_KEYS=example
+API_TOKEN_SALT=example
+ADMIN_JWT_SECRET=example
+TRANSFER_TOKEN_SALT=example
+GOOGLE_CLIENT_ID=example
+GOOGLE_CLIENT_SECRET=GOCSPX-example
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=example
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=example
+DATABASE_PASSWORD=example
+DATABASE_SSL=true
+JWT_SECRET=example
