--- a/svelte-frontend/Dockerfile
+++ b/svelte-frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY package.json yarn.lock ./
-Run yarn install --frozen-lockfile --ignore-scripts
+RUN yarn install --frozen-lockfile --ignore-scripts
 COPY . .
 RUN yarn build
 EXPOSE 3000
