--- a/svelte-frontend/package.json
+++ b/svelte-frontend/package.json
@@ -10,38 +10,52 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
+		"test:unit:ui": "vitest --ui",
+		"coverage": "vitest run --coverage",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@floating-ui/dom": "^1.2.8",
+		"@floating-ui/dom": "^1.4.4",
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "^1.28.1",
-		"@skeletonlabs/skeleton": "^1.5.1",
+		"@playwright/test": "^1.35.1",
+		"@skeletonlabs/skeleton": "^1.9.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/kit": "^1.20.5",
+		"@sveltejs/vite-plugin-svelte": "^2.4.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "4.0.0",
 		"@types/cookie": "^0.5.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@vitest/coverage-istanbul": "^0.32.2",
 		"autoprefixer": "^10.4.14",
+		"boxen": "^7.1.1",
+		"dayjs": "^1.11.9",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.26.0",
+		"eslint-plugin-svelte": "^2.31.1",
+		"jsdom": "^22.1.0",
 		"postcss": "^8.4.23",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.3.1",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.1",
+		"svelte-check": "^3.4.4",
+		"svelte-preprocess": "^5.0.4",
+		"sveltekit-superforms": "^1.1.3",
+		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"typescript": "^5.1.3",
+		"vite": "^4.3.9",
+		"vitest": "^0.32.2",
+		"zod": "^3.21.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"msw": "^1.2.2"
+	}
 }
