--- a/svelte-frontend/package.json
+++ b/svelte-frontend/package.json
@@ -22,6 +22,7 @@
 		"@playwright/test": "^1.35.1",
 		"@skeletonlabs/skeleton": "^1.9.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^3.0.2",
 		"@sveltejs/kit": "^1.20.5",
 		"@sveltejs/vite-plugin-svelte": "^2.4.2",
 		"@tailwindcss/forms": "^0.5.3",
